moved head to sep. file

--- a/aboutpg.html
+++ b/aboutpg.html
@@ -1,21 +1,12 @@
 ---
-Title: Technical Info Page
+Title: Technical Info
 ---
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<!--CSS-->
-    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
-<!--jQUERY-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<!--OTHER-->
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <title>Technical Information | Team Enginuity</title>
+    { % include head.html %}
 </head>
 
 <body>
@@ -32,6 +23,15 @@ Title: Technical Info Page
             <p>This website was created from scratch in the free, open-source <a target="_blank" href="http://brackets.io">Brackets</a> HTML editor. Brackets is developed in HTML, CSS and JavaScript, making anyone who uses the editor also capable of tweaking the editor by writing extensions.</p>
             <p>We are using <a target="_blank" href="http://pages.github.com">GitHub Pages</a> to host the site. GitHub Pages was chosen because it is free, fast, reliable and simple.</p> <p>In the spirit of <a target="_blank" href="http://www.usfirst.org/aboutus/gracious-professionalism">Coopertition</a> you can also view and download all of the source code <a target="_blank" href="https://github.com/warwickhsrobotics/warwickhsrobotics.github.io">HERE.</a></p>
             <p style="font-size: 0.8em;">Psst... If you are an FRC team, you can request a free GitHub organization account <a target="_blank" href="http://education.github.com">HERE.</a> Git is revision control software -- it can be used for groups to work on code together easily.</p>
+            <h2>Changelog</h2>
+            <ul>
+                <li>Version 0.6
+                    <ul>
+                        <li>Used Jekyll's include feature</li>
+                        <li>Moved away from IFrames</li>
+                        <li></li>
+                </li>
+            </ul>
         </div>
         <div id="footer">
             {% include footer.html %}
