--- a/first.html
+++ b/first.html
@@ -1,5 +1,5 @@
 ---
-Title: About FIRST Page
+Title: About FIRST
 ---
 
 
@@ -7,16 +7,7 @@ Title: About FIRST Page
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<!--CSS-->
-    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
-<!--jQUERY-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<!--OTHER-->
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <title>About FIRST | Team Enginuity</title>
+    { % include head.html %}
 </head>
 
 <body>
