Revert "moved head to sep. file"
This reverts commit 01ad8ed1c940360bb2a043c73fc7983de6c9e616.

--- a/media.html
+++ b/media.html
@@ -1,12 +1,21 @@
 ---
-Title: Media
+Title: Media Page
 ---
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    { % include head.html %}
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!--CSS-->
+    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
+<!--jQUERY-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!--OTHER-->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <title>Media | Team Enginuity</title>
 </head>
 
 <body>
