--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-Title: Home
+Title: Index Page
 ---
 
 
@@ -16,7 +16,17 @@ Title: Home
 -->
 
 <head>
-    { % include head.html %}
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!--CSS-->
+    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
+<!--jQUERY-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!--OTHER-->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <title>Home | Team Enginuity</title>
+    <meta name='description' content="Second-Year FTC and FRC Team with lots of potential from Newport News, Virginia">
 </head>
 
 <body>
