Added contact form to contact page

--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,17 @@ Title: Contact Us Page
                     <h3>webmaster@mail.teamenginuity.org</h3>
                 <p>Other General Inquiries</p>
                     <h3>inquiries@mail.teamenginuity.org</h3>
+            <!-- Do not change the code! -->
+            <a id="foxyform_embed_link_526927" href="http://www.foxyform.com/">foxyform</a>
+            <script type="text/javascript">
+                (function(d, t){
+                    var g = d.createElement(t),
+                    s = d.getElementsByTagName(t)[0];
+                    g.src = "http://www.foxyform.com/js.php?id=526927&sec_hash=dc71a95f50a&width=350px";
+                    s.parentNode.insertBefore(g, s);
+                }(document, "script"));
+            </script>
+            <!-- Do not change the code! -->
         </div>
         <div id="footer">
             {% include footer.html %}
