--- a/media.html
+++ b/media.html
@@ -30,9 +30,13 @@ Title: Media Page
         </div>
         <div id="main">
             <h1>Media</h1>
-            <div id="media-ftc" class="center">
+            <div id="media-ftc" class="left">
                 <h2>FTC</h2>
                 <object width="400" height="300"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2F&set_id=72157640738246603&jump_to="></param> <param name="movie" value="http://www.flickr.com/apps/slideshow/show.swf?v=140556"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="http://www.flickr.com/apps/slideshow/show.swf?v=140556" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2F&set_id=72157640738246603&jump_to=" width="400" height="300"></embed></object>
+            </div>
+            <div id="media-frc" class="right">
+                <h2>FRC</h2>
+                <object width="400" height="300"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2F&set_id=72157644172624626&jump_to="></param> <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=143270"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=143270" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2F&set_id=72157644172624626&jump_to=" width="400" height="300"></embed></object>
             </div>
         </div>
         <div id="footer">
