--- a/media.html
+++ b/media.html
@@ -9,7 +9,7 @@ Title: Media Page
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!--CSS-->
     <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
+    <link href="/css/master.css" rel="stylesheet" type="text/css">
 <!--JS-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
@@ -30,13 +30,21 @@ Title: Media Page
         </div>
         <div id="main">
             <h1>Media</h1>
-            <div id="media-ftc" class="left">
+            <p>Here are some photos of Team Enginuity at various competitions and community events!</p>
+            <div class="media" id="media-ftc">
                 <h2>FTC</h2>
-                <object width="400" height="300"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2F&set_id=72157640738246603&jump_to="></param> <param name="movie" value="http://www.flickr.com/apps/slideshow/show.swf?v=140556"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="http://www.flickr.com/apps/slideshow/show.swf?v=140556" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2F&set_id=72157640738246603&jump_to=" width="400" height="300"></embed></object>
+                <! -- FTC QUALIFIER @ NSU - 25 JAN 2014>
+                <object width="250" height="300"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2F&set_id=72157640738246603&jump_to="></param> <param name="movie" value="http://www.flickr.com/apps/slideshow/show.swf?v=140556"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="http://www.flickr.com/apps/slideshow/show.swf?v=140556" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2F&set_id=72157640738246603&jump_to=" width="400" height="300"></embed></object>
             </div>
-            <div id="media-frc" class="right">
+            <div class="media" id="media-com">
+                <h2>Community Events</h2>
+                <! -- STEM COMMUNITY DAY - 31 MAY 2014>
+                <object width="250" height="300"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157645466987761%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157645466987761%2F&set_id=72157645466987761&jump_to="></param> <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=143270"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=143270" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157645466987761%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157645466987761%2F&set_id=72157645466987761&jump_to=" width="400" height="300"></embed></object>
+            </div>
+            <div class="media" id="media-frc">
                 <h2>FRC</h2>
-                <object width="400" height="300"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2F&set_id=72157644172624626&jump_to="></param> <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=143270"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=143270" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2F&set_id=72157644172624626&jump_to=" width="400" height="300"></embed></object>
+                <! -- FRC QUALIFIFER @ VCU - 20-22 MAR 2014>
+                <object width="250" height="300"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2F&set_id=72157644172624626&jump_to="></param> <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=143270"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=143270" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2F&set_id=72157644172624626&jump_to=" width="400" height="300"></embed></object>
             </div>
         </div>
         <div id="footer">
