--- a/team.html
+++ b/team.html
@@ -45,7 +45,6 @@ Title: Team Roster Page
                 <tr class="normalp">
                     <td>Coaches + Mentors</td>
                     <td><h3>Coach: Karen Bazemore</h3>
-                        <p>C. Garrity (College Student and FIRST alum)</p>
                         <p>J. Stork (NNPS)</p>
                         <p>M. Johnson (US Navy and FIRST alum)</p>
                         <p>E. Leeks (Huntington Ingalls)</p>
@@ -58,13 +57,13 @@ Title: Team Roster Page
                 </tr>
                     <td>Mechanical</td>
                     <td><h3>Co-Leads: Ernest N. (2016) & Adam P. (2016)</h3>
-                        <p>Courtney S. (2014)</p>
                         <p>Sahaj B. (2015)</p>
                         <p>Christian M. (2015)</p>
                         <p>Dani C. (2016)</p>
+                        <p>Justin G. (2016)</p>
                         <p>Taj F. (2016)</p>
                         <p>Quintin L. (2016)</p>
-                        <p>Justin G. (2016)</p>
+                        <p>Kyra M. (2016)</p>
                         <p>Joanne S. (2016)</p>
                         <p>Joe B. (2017)</p>
                         <p>Daniel B. (2017)</p>
@@ -75,6 +74,7 @@ Title: Team Roster Page
                     <td><h3>Lead: Quintin L. (2016)</h3>
                         <p>Lawrence P. (2015)</p>
                         <p>Sarah F. (2016)</p>
+                        <p>Kyra M. (2016)</p>
                         <p>Ernest N. (2016)</p>
                         <p>Joanne S. (2016)</p>
                         <p>Daniel B. (2017)</p>
@@ -115,6 +115,14 @@ Title: Team Roster Page
                     <td>Marketing</td>
                     <td><h3>Lead: Las S. (2016)</h3>
                         <p>Jonathan L. (2016)</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Alumni</td>
+                    <td>
+                        <p>Thomas O. (2013)</p>
+                        <p>Andres S. (2014)</p>
+                        <p>Courtney S. (2014)</p>
                     </td>
                 </tr>
             </table>
