updated ftc page

--- a/ftc.html
+++ b/ftc.html
@@ -31,20 +31,21 @@ Title: FTC Page
         </div>
         <div id="main">
             <h1>About FTC</h1>
-            <p>2013-14 Game: <strong>Block Party</strong></p>
+            <p>2014-15 Game: <strong>Cascade Effect</strong></p>
+            <p><strong>View Previous Games</strong> <a href="oldgames/ftc2013.html">2013-2014</a></p>
             <table class="gameinfo center">
                 <tr>
-                    <td class="gamelogo"><img alt="FTC Block Party logo" src="./assets/first/ftc2014.png"></td>
-                    <td class="gamevideo"><iframe width="400" height="225" src="http://www.youtube.com/embed/UPAATO-NpcM" frameborder="0" allowfullscreen></iframe></td>
+                    <td class="gamelogo"><img alt="FTC Cascade Effect logo" src="./assets/first/ftc2014.png"></td>
+                    <td class="gamevideo"><iframe width="400" height="225" src="http://www.youtube.com/watch?v=ABmBxCwHV94" frameborder="0" allowfullscreen></iframe></td>
                 </tr>
             </table>
             <div class="gamecontainer">
                 <div class="gamelinks">
                     <h2>Related Resources:</h2>
                     <ul>
-                        <li><a target="_blank" href="http://www.usfirst.org/sites/default/files/uploadedFiles/Robotics_Programs/FTC/Game_Info/2013/FTC-2013-2014_Game_Manual_Part_1.pdf">
+                        <li><a target="_blank" href="http://www.usfirst.org/sites/default/files/uploadedImages/Robotics_Programs/FTC/FTC_Documents_and_Updates/Game_Manual_Part_I.pdf">
                             Game Manual (Part 1)</a></li>
-                        <li><a target="_blank" href="http://www.usfirst.org/sites/default/files/uploadedFiles/Robotics_Programs/FTC/Game_Info/2013/FTC-2013-2014_Game_Manual_Part_2.pdf">
+                        <li><a target="_blank" href="http://www.usfirst.org/sites/default/files/uploadedImages/Robotics_Programs/FTC/FTC_Documents_and_Updates/FTC_Game_Manual_Part_2-Rev_0_0.pdf">
                             Game Manual (Part 2)</a></li>
                         <li><a target="_blank" href="http://www.usfirst.org/roboticsprograms/ftc/team-resources">
                             Team Resources</a></li>
@@ -55,9 +56,9 @@ Title: FTC Page
                     </ul>
                 </div>
                 <div class="gametext">
-                    <p>FTC BLOCK PARTY! is played on a 12’x12’ square field with approximately 1’-high walls and a soft foam mat playing surface. Two randomly selected teams are paired together as an Alliance to play one match against a second Alliance. Alliances are designated as either “Red” or “Blue.”</p> 
-                    <p>Scoring Elements are 100, 2”, 2oz. plastic blocks. These blocks are yellow and can be used by all robots. At the center of the field is an assembly that includes a center bridge, pull-up bar, and two pendulums – each with four “pendulum goal baskets.” Below the pendulums are floor scoring areas. An Infrared (IR) Beacon is randomly placed under one of the four goals on each pendulum after robots are placed on the field, but before the Autonomous period starts. The field includes tape to aid robot navigation and to mark protected areas. Each Alliance also has their own flagpole in opposite corners of the field.</p>
-                    <p>At the start of a match, blocks are located in the two corners at the front and back of the playing field and are distributed evenly with approximately 48 per corner at the start of the match. Each robot starts with one block which teams can pre-load onto their robot. Robots may not possess or control more than four blocks at any time. Each Alliance starts with their robots touching the outer field perimeter wall on their side of the playing field.Matches have two distinct periods of play: a 30-second Autonomous period followed by a two-minute Driver-Controlled period, which includes a 30-second End Game.</p>
+                    <p>CASCADE EFFECT℠is played on a 3.66 m x 3.66 m (12’x12’) square Field with approximately 30.5 cm (1’)-high walls and a soft foam mat playing surface. Two randomly selected teams are paired together as an Alliance to play a match against a second Alliance. Alliances are designated as either “Red” or “Blue.”</p> 
+                    <p>Scoring Elements are 160 white plastic balls - large (40) and small (120). In the middle of the field is the Center Field Structure which contains two Ball Dispensers with trap doors held in place by Alliance-specific Kickstands. There are also two Center Goals - one Red and one Blue - with Infrared Beacons placed beneath each Goal. The field has six Alliance-specific Rolling Goals with clear Ball Tubes of various heights (30 cm, 60 cm, 90 cm) as well as two Alliance-specific Ramps, Platforms, and Parking Zones.</p>
+                    <p>At the start of the Match, the Balls (large and small) are loaded in the Dispensers in the Center Field Structure. Each Team is given two balls (one large and one small) that can be pre-loaded onto their robot. Matches have two distinct periods of play: a 30-second Autonomous period followed by a two-minute Driver-Controlled period, which includes a 30-second End Game.</p>
                 </div>
             </div>
         </div>
