--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Title: Index Page
      FTC 5969 | FRC 4538
      DESIGN BY JONATHAN LACSON
 
-     CODED BY HAND IN BRACKETS
+     CODED IN BRACKETS
      VERSION 0.6e - 6 FEB 2014
 -->
 
@@ -28,7 +28,7 @@ Title: Index Page
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>Home | Team Enginuity</title>
-    <meta name='description' content="Second-Year FTC and FRC Team with lots of potential from Newport News, Virginia">
+    <meta name='description' content="Third-Year FTC and FRC Team with lots of potential from Newport News, Virginia">
 </head>
 
 <body>
