Updated FRC/FTC games, updated header /w girls team

--- a/frc.html
+++ b/frc.html
@@ -31,20 +31,21 @@ Title: FRC Page
         </div>
         <div id="main">
             <h1>About FRC</h1>
-            <p>2014 Game: <strong>Aerial Assist</strong></p>
+            <p>2015 Game: <strong>Recycle Rush</strong></p>
+            <p><strong>View Previous Games</strong> <a href="oldgames/frc2014.html">2014</a></p>
             <table class="gameinfo center">
                 <tr>
-                    <td class="gamelogo"><img alt="Aerial Assist Logo" src="./assets/first/frc2014.png"></td>
-                    <td class="gamevideo"><iframe width="400" height="225" src="http://www.youtube.com/embed/oxp4dkMQ1Vo" frameborder="0" allowfullscreen></iframe></td>
+                    <td class="gamelogo"><img alt="Recycle Rush Logo" src="./assets/first/frc2015.png"></td>
+                    <td class="gamevideo"><iframe width="400" height="225" src="https://www.youtube.com/watch?v=hTyCIYZQ" frameborder="0" allowfullscreen></iframe></td>
                 </tr>
             </table>
             <div class="gamecontainer">
                 <div class="gamelinks">
                     <h2>Related Resources:</h2>
                     <ul>
-                        <li><a target="_blank" href="http://frc-manual.usfirst.org/">
+                        <li><a target="_blank" href="http://www.usfirst.org/sites/default/files/uploadedFiles/Robotics_Programs/FRC/Game_and_Season__Info/2015/2015GameManual0116.pdf">
                             Game Manual</a></li>
-                        <li><a target="_blank" href="http://frc-manual.usfirst.org/Updates/0">
+                        <li><a target="_blank" href="http://www.usfirst.org/sites/default/files/uploadedFiles/Robotics_Programs/FRC/Game_and_Season__Info/2015/TeamUpdateBundle.pdf">
                             <strong>UPDATES</strong> to Manual</a></li>
                         <li><a target="_blank" href="http://www.usfirst.org/roboticsprograms/frc/technical-resources">
                             Technical Resources</a></li>
@@ -55,10 +56,11 @@ Title: FRC Page
                     </ul>
                 </div>
                 <div class="gametext">
-                    <p>AERIAL ASSIST is played by two competing Alliances of three robots each on a flat 25’ x 54’ foot field, straddled by a truss suspended just over five feet above the floor. The objective is to score as many balls in goals as possible during a two (2)-minute and 30-second match. The more Alliances score their ball in their goals, and the more they work together to do it, the more points their Alliance receives.</p> 
-                    <p>The match begins with one 10-second Autonomous Period in which robots operate independently of driver. Each robot may begin with a ball and attempt to score it in a goal. Alliances earn bonus points for scoring balls in this mode and for any of their robots that move in to their zones. Additionally, each high/low pair of goals will be designated “hot” for five seconds, but the order of which side is first is randomized. For each ball scored in a “hot” goal, the Alliance earns additional bonus points.</p>
-                    <p>For the rest of the match, drivers remotely control robots from behind a protective wall. Once all balls in autonomous are scored, only one ball is re-entered in to play, and the Alliances must cycle a single ball as many times as possible for the remainder of the match. With the single ball, they try to maximize their points earned by throwing balls over the truss, catching balls launched over the truss, and scoring in the high and low goals on the far side of the field.</p>
-                    <p>Alliances receive large bonuses for “assists,” which are earned for each robot that has possession of the ball in a zone as the ball moves down the field.</p>
+                    <p>RECYCLE RUSH is a recycling-themed game played by two Alliances of three robots each. Robots score points by stacking totes on scoring platforms, capping those stacks with recycling containers, and properly disposing of pool noodles, representing litter. In keeping with the recycling theme of the game, all game pieces used are reusable or recyclable by teams in their home locations or by FIRST® at the end of the season.</p> 
+                    <p>Each Alliance competes on their respective 26 ft. by 27 ft. side of the playing field. Each match begins with a 15-second Autonomous Period in which robots operate independently of their drivers. During this period, robots attempt to earn points by moving themselves, their yellow totes, and their recycling containers into the area between the scoring platforms, called the Auto Zone. </p>
+                    <p>During the remaining two minutes and 15 seconds of the match, called the Teleop Period, robots are controlled remotely by student drivers located behind the walls at the ends of the field. Teams on an Alliance work together to place as many totes on their white scoring platforms as possible. Alliances earn additional points for recycling containers placed on the scored totes, with containers at greater height earning more points. </p>
+                    <p>Alliances also earn points for disposing of their litter in their Landfill Zone near the center of the field, or placing litter in or on scored recycling containers. Alliances that leave litter unprocessed on their side of the field at the end of the match, not in scoring position, will add points to the score of the other Alliance.</p>
+                    <p>Alliances have an opportunity to earn Coopertition® points by coordinating with the other Alliance in the match. Coopertition points are awarded if, at some point in the match, there are at least four yellow totes on the step simultaneously. Coopertition points are doubled if the Alliances arrange at least four of those yellow totes in a single stack on the step.</p>
                 </div>
             </div>
         </div>
