--- a/team.html
+++ b/team.html
@@ -47,12 +47,16 @@ Title: Team Roster Page
                     <td><h3>Coach: Karen Bazemore</h3>
                         <p>J. Stork (NNPS)</p>
                         <p>M. Johnson (US Navy and FIRST alum)</p>
+                        <p>C. Foster (NASA)</p>
+                        <p>A. Welters (NASA)</p>
+                        <p>J. Welters (NASA)</p>
+                        <p>M. Cooney (NASA)</p>
                         <p>E. Leeks (Huntington Ingalls)</p>
                     </td>
                 </tr>
                 <tr class="normalp">
                     <td>Captains</td>
-                    <td><h3>Co-Team Captains: Christian M. (2015) & Sahaj B. (2015)</h3>
+                    <td><h3>Captain: TBD</h3>
                         <p>Safety Captain: Las S. (2016)</p></td>
                 </tr>
                     <td>Mechanical</td>
@@ -79,6 +83,7 @@ Title: Team Roster Page
                         <p>Joanne S. (2016)</p>
                         <p>Daniel B. (2017)</p>
                         <p>Valencia R. (2017)</p>
+                        <p>Josue B. (2018)</p>
                     </td>
                 </tr>
                 <tr>
@@ -87,6 +92,7 @@ Title: Team Roster Page
                         <p>Lawrence P. (2015)</p>
                         <p>Rakshith R. (2015)</p>
                         <p>Sarah F. (2016)</p>
+                        <p>Bryce E. (2018)</p>
                     </td>
                 </tr>
                 <tr>
