Fixed embedded videos, fixed scripts

--- a/ftc.html
+++ b/ftc.html
@@ -36,7 +36,7 @@ Title: FTC Page
             <table class="gameinfo center">
                 <tr>
                     <td class="gamelogo"><img alt="FTC Cascade Effect logo" src="./assets/first/ftc2014.png"></td>
-                    <td class="gamevideo"><iframe width="400" height="225" src="http://www.youtube.com/watch?v=ABmBxCwHV94" frameborder="0" allowfullscreen></iframe></td>
+                    <td class="gamevideo"><iframe width="400" height="225" src="//www.youtube.com/watch?v=ABmBxCwHV94" frameborder="0" allowfullscreen></iframe></td>
                 </tr>
             </table>
             <div class="gamecontainer">
