--- a/frc.html
+++ b/frc.html
@@ -32,10 +32,10 @@ Title: FRC Page
         <div id="main">
             <h1>About FRC</h1>
             <p>2015 Game: <strong>Recycle Rush</strong></p>
-            <p><strong>View Previous Games</strong> <a href="oldgames/frc2014.html">2014</a></p>
+            <p><strong>View Previous Games</strong> <a href="/oldgames/frc2014.html">2014</a></p>
             <table class="gameinfo center">
                 <tr>
-                    <td class="gamelogo"><img alt="Recycle Rush Logo" src="./assets/first/frc2015.png"></td>
+                    <td class="gamelogo"><img alt="Recycle Rush Logo" src="/assets/first/frc2015.png"></td>
                     <td class="gamevideo"><iframe width="400" height="225" src="//www.youtube.com/watch?v=hTyCIYZQ" frameborder="0" allowfullscreen></iframe></td>
                 </tr>
             </table>
