--- a/media.html
+++ b/media.html
@@ -34,19 +34,23 @@ Title: Media Page
             <div class="media" id="media-ftc">
                 <h2>FTC</h2>
                 <object width="300" height="300"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2F&set_id=72157640738246603&jump_to="></param> <param name="movie" value="http://www.flickr.com/apps/slideshow/show.swf?v=140556"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="http://www.flickr.com/apps/slideshow/show.swf?v=140556" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2F&set_id=72157640738246603&jump_to=" width="300" height="300"></embed></object>
-                <p>FTC Qualifier @ NSU - 25 January 2014</p>
+                <p>FTC Qualifier @ NSU</p>
+                <p><strong>25 January 2014</strong></p>
                 <object width="300" height="225"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157649939570227%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157649939570227%2F&set_id=72157649939570227&jump_to="></param> <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=1811922554"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=1811922554" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157649939570227%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157649939570227%2F&set_id=72157649939570227&jump_to=" width="300" height="225"></embed></object>
-                <p>FTC Qualifier @ Arthur Ashe Center - 6 December 2014</p>
+                <p>FTC Qualifier @ Arthur Ashe Center</p>
+                <p><strong>6 December 2014</strong></p>
             </div>
             <div class="media" id="media-com">
                 <h2>Community Events</h2>
                 <object width="300" height="300"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157645466987761%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157645466987761%2F&set_id=72157645466987761&jump_to="></param> <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=143270"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=143270" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157645466987761%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157645466987761%2F&set_id=72157645466987761&jump_to=" width="300" height="300"></embed></object>
-                <p>STEM Community Day - 31 May 2014</p>
+                <p>STEM Community Day</p>
+                <p><strong>31 May 2014</strong></p>
             </div>
             <div class="media" id="media-frc">
                 <h2>FRC</h2>
                 <object width="300" height="300"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2F&set_id=72157644172624626&jump_to="></param> <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=143270"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=143270" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157644172624626%2F&set_id=72157644172624626&jump_to=" width="300" height="300"></embed></object>
-                <p>FRC Virginia Regional @ VCU - 20-22 March 2014</p>
+                <p>FRC Virginia Regional @ VCU</p>
+                <p><strong>20-22 March 2014</strong></p>
             </div>
         </div>
         <div id="footer">
